manifests/apps/gateway/api-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-http-route
  namespace: monitoring
spec:
  parentRefs:
    - name: observability-gateway
      sectionName: https-api
  hostnames:
    - "api.${ROOT_DOMAIN}"
  rules:
    - backendRefs:
        - name: agent-grpc-backend
          port: 10001
