manifests/apps/gateway/proxy-fe-admin-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: proxy-fe-admin-http-route
  namespace: monitoring
spec:
  parentRefs:
    - name: observability-gateway
      sectionName: https-admin
  rules:
    - backendRefs:
        - name: proxy-fe-admin
          port: 3000
